--- a/packages/sites/genomics-site/webapp/wdkCustomization/css/client.scss
+++ b/packages/sites/genomics-site/webapp/wdkCustomization/css/client.scss
@@ -377,11 +377,12 @@
   display: block;
 }
 
-.wdk-RecordTable__ExpressionGraphs .wdk-DataTableCell__display_name {
-  min-width: 18em;
-}
+// .wdk-RecordTable__ExpressionGraphs .wdk-DataTableCell__display_name {
+//   min-width: 18em;
+// }
 .wdk-RecordTable__ExpressionGraphs .wdk-DataTableCell__summary {
-  max-width: 35em;
+  // max-width: 35em;
+  min-width: 25em;
 }
 
 .wdk-RecordTable__ProteinExpressionGraphs .wdk-DataTableCell__assay_type {
