--- a/packages/sites/genomics-site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/packages/sites/genomics-site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -108,7 +108,7 @@
     }
 
     &__collapsed {
-      position: fixed;
+      position: sticky;
       top: 5.5em;
       box-shadow: 0 1px 1px #00000066;
     }
