--- a/packages/sites/genomics-site/webapp/wdkCustomization/css/client.scss
+++ b/packages/sites/genomics-site/webapp/wdkCustomization/css/client.scss
@@ -2,6 +2,7 @@
 .msp-plugin .msp-layout-expanded {
   /* Deal with fixed header */
   top: 168px;
+  z-index: 1;
 }
 
 /* Hide default record ID printed by WDK for genes */
