--- a/packages/sites/genomics-site/webapp/wdkCustomization/css/client.scss
+++ b/packages/sites/genomics-site/webapp/wdkCustomization/css/client.scss
@@ -428,6 +428,7 @@
 /** record table cell overrides */
 
 /** content in these cells should not wrap */
+.wdk-DataTableCell__note,
 .wdk-DataTableCell__transcript_id,
 .wdk-DataTableCell__transcript_ids,
 .wdk-DataTableCell__Pvalue,
